--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         const naturalReadButton = document.getElementById('natural-read-button');
         const stopButton = document.getElementById('stop-button');
         const speedInput = document.getElementById('speed-input');
+        let audio;
 
         let words = [];
 
@@ -151,6 +152,11 @@
             if (synth.speaking) {
                 synth.cancel();
             }
+
+            if (audio) {
+                audio.pause();
+                audio.currentTime = 0;
+            }
         });
 
         async function fetchAzureTTS(text) {
@@ -174,7 +180,7 @@
             if (audioResponse.ok) {
                 const audioBlob = await audioResponse.blob();
                 const audioUrl = URL.createObjectURL(audioBlob);
-                const audio = new Audio(audioUrl);
+                audio = new Audio(audioUrl);
                 audio.play();
             } else {
                 console.error('Error fetching TTS data:', audioResponse.status, audioResponse.statusText);
