--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             `;
 
             // Get the audio data
-            const audioResponse = await fetch("https://weary-train-bull.cyclic.app/api/speech-to-text", {
+            const audioResponse = await fetch("https://asnewman-mcsproxy.web.val.run", {
                 method: 'POST',
                 body: ssml,
             });
